# panel-lemanique-scripts

./: README.md
python/: README.md  example.qmd  pyproject.toml
r/: README.md  example.html  example.qmd
