[tool.poetry]
name = "pl_example"
version = "0.0.0"
description = ""
authors = ["Hugo Solleder <hugo.solleder@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
